--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,9 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  dio: ^4.0.4
+  mobx: ^2.0.5
+  flutter_mobx: ^2.0.2
   flutter:
     sdk: flutter
 
@@ -36,6 +39,9 @@ dependencies:
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
+  json_serializable: ^6.1.1
+  mobx_codegen: ^2.0.4
+  build_runner: ^2.1.5
   flutter_test:
     sdk: flutter
 
